[gd_scene load_steps=4 format=2]

[ext_resource path="res://Source/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Form_name.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="Form_name" type="Label"]
margin_right = 1023.0
margin_bottom = 14.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Test"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "____"

[connection signal="gui_input" from="." to="." method="_on_Form_name_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Form_name_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Form_name_mouse_exited"]
